style.css
body {
    display: flex;
    width: auto;
    flex-direction: column;
}

header {
    display: flex;
    width: 100%;
    max-height: 45vw;
}

.navbar {
    background-color: white;
    position: fixed;
    z-index: 100;
    width: 100%;
    display: flex;
    justify-content: space-between;
    padding-right: 24px;
    padding-left: 24px;
    height: 64px;
    top: 0;
    left: 0;
    align-content: center;
}

li {
    display: flex;
    align-items: center;
}

.navlinks a {
    align-self: auto;
    text-decoration: none;
    color: black;
    padding-left: 16px;
}

.navlinksmobile {
    display: none;
}

.logo  {
    display: flex;
    align-items: center;
    align-content: center;
    text-align: center;
}

.logo img{
    height: 32px;
    width: auto;
    align-self: center;
}

/* Banner Section */

.banner {
    display: flex;
    flex-direction: row;
    width: 100%;
    background-color: rgb(209, 211, 211);
    
}

.bannerimg {
    box-sizing: border-box;
    display: flex;
    max-width: 60%;
    padding: 32px 12px 32px 24px;
}

.bannerimg img {
    width: 100%;
    max-height: 100%;
    min-width: 0;
    min-height: fit-content;
}

.bannerinfo {
    display: flex;
    box-sizing: border-box;
    flex-direction: column;
    justify-content:space-around;
    align-items: stretch;
    padding-top: 20%;
    padding-bottom: 20%;
    margin-left: 24px;
    max-width: 40%;
}

.bannerinfo h1 {
    font-weight: bold;
    padding: 20px 0px;
}

.bannerinfo h2 {
    padding: 20px 0px;
} 

.begin, .btn {
    justify-content: center;
    align-items: center;
    display: inline-flex;
    height: 60px;
    max-width: 100%;
    margin: 20px 0px;
    padding: 8px 0px;
    background-color: rgb(71, 71, 71);
}

/* Information Section */

main {
    display: flex;
    flex-direction: column;
}

.first {
    display: flex;
    flex-direction: row;
    margin-bottom: 32px;
}

.information {
    display: flex;
    max-width: 60%;
    box-sizing: border-box;
    flex-direction: column;
    padding: 32px 12px 0px 24px;
    
}

.information p {
    margin-top: 24px;
}

.information img {
    width: 100%;
    max-height: fit-content;
    min-width: 0;
}

.asideinfo {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 40%;
    max-width: 40%;
    max-height: auto;
    height: auto;
    margin: 32px 0px 0px 16px;
}

.mini {
    display: flex;
    flex-direction: row;
    
}

.mini img {
    width: 35%;
    max-height: 100%;
    min-width: 0;
    max-height: auto;
    height: auto;
    margin: 16px 16px;
}

.miniinfo {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 65%;
}

.miniinfo a {
    text-decoration: none;
}

/*Courses Section */

.second {
    display: flex;
    box-sizing: border-box;
    flex-direction: column;
    align-items: center;
    padding: 32px 61px 32px 61px;
    background-color: rgb(209, 211, 211);
} 

.second h1 {
    margin: 32px 0px;
}

.courses {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.coursebox {
    display: flex;
    flex-direction: column;
    margin: 16px 16px 32px 16px;
    background-color: white;
}

.coursebox-end {
    display: flex;
    flex-direction: column;
    margin: 16px 16px 32px 16px;
    background-color: white;
}

.coursebox img, .coursebox-end img {
    height: auto;
}

.textbox {
    display: flex;
    flex-direction: column;
    align-items: left;
    margin-left: 16px;
    margin-bottom: 24px;
}

.textbox h3 {
    font-weight: bold;
    margin-top: 16px;
}

.textbox h5 {
    line-height: 200%;
}

.textbox h4, .textbox h5 {
    margin-top: 8px;
}

.third {
    display: flex;
    flex-direction: row;
    margin-bottom: 32px;
}

.thesis {
    display: flex;
    width: 60%;
    box-sizing: border-box;
    flex-direction: column;
    padding: 32px 12px 0px 24px;
    margin-bottom: 32px;
    align-items: center;
}

.thesistitle {
    text-align: center;
    margin-top: 32px;
    margin-bottom: 0;
    padding: 0;
}

.viddiv {
    max-width: 100%;
    box-sizing: border-box;
    flex-direction: column;
    padding: 0px 24px 24px 24px;
}

.viddiv video {
    width: 100%;
    max-height: auto;
    min-width: 0;
}

.vidinfo {
    max-width: 100%;

}


.asidevid {
    display: flex;
    flex-direction: column;
    justify-content: top;
    width: 40%;
    max-width: 40%;
    max-height: auto;
    height: auto;
    margin: 0px 0px 0px 16px;
    padding-top: 32px;
}

.minivid {
    display: flex;
    flex-direction: row; 
    align-items: center;
}

.minivid img {
    width: 35%;
    max-height: 100%;
    min-width: 0;
    max-height: auto;
    height: auto;
    margin: 16px 16px;
}

footer {
    display: flex;
    justify-content: space-between;
    margin-right: 24px;
}

/* Mobile Site */

@media only screen and (max-width: 610px) {

    body {
        flex-direction: column;
    }

    header {
        max-height: auto;
    }

    .navbar {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-items: center;
        max-width: 100vw;
    }

    .logo {
        width: 30%;
    }

    .logo h5 {
        visibility: hidden;
    }

    .navlinks a {
        visibility: hidden;
        max-width: 80%;
    }

    .navlinks {
        display: none;
    }

    .navlinksmobile {
        display: flex;
        justify-content: space-between;
        max-width: 70%;
        width: 70%;
    }

    .banner {
        height: auto;
        max-height: auto;
        flex-direction: column;
    }

}

